--- a/2_models.ipynb
+++ b/2_models.ipynb
@@ -259,7 +259,7 @@
    "id": "d981d990",
    "metadata": {},
    "source": [
-    "### Tunning de hiperparámetros y entrenamiento de modelo"
+    "### Ajuste de hiperparámetros y entrenamiento de modelo"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "metadata": {},
    "source": [
     "## 3.2 Bagging (Random Forest)\n",
-    "### Tunning de hiperparámetros y entrenamiento de modelo"
+    "### Ajuste de hiperparámetros y entrenamiento de modelo"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "metadata": {},
    "source": [
     "## 3.3 Boosting (CatBoost)\n",
-    "### Tunning de hiperparámetros y entrenamiento de modelo"
+    "### Ajuste de hiperparámetros y entrenamiento de modelo"
    ]
   },
   {
