--- a/2_models.ipynb
+++ b/2_models.ipynb
@@ -3526,11 +3526,11 @@
    "source": [
     "### Tabla de Hiperparámetros Usados con Hyperband (HalvingGridSearchCV)\n",
     "\n",
-    "| Hiperparámetro | Valores Evaluados                      |\n",
+    "| Hiperparámetro | Valor                      |\n",
     "|----------------|----------------------------------------|\n",
-    "| `C`            | 0.001, 0.01, 0.1, 1, 10                |\n",
+    "| `C`            | 0.1                |\n",
     "| `penalty`      | l2                                     |\n",
-    "| `solver`       | lbfgs, saga                            |\n",
+    "| `solver`       | saga                            |\n",
     "| `scoring`      | roc_auc                                |\n",
     "| `cv`           | 5 folds                                |\n",
     "| `factor`       | 2 (reducción de candidatos por iteración) |\n"
