--- a/2_models.ipynb
+++ b/2_models.ipynb
@@ -3524,7 +3524,7 @@
    "id": "1ee8ca82",
    "metadata": {},
    "source": [
-    "### Tabla de Hiperparámetros Usados con Hyperband (HalvingGridSearchCV)\n",
+    "### Tabla de Hiperparámetros encontrados con Hyperband (HalvingGridSearchCV)\n",
     "\n",
     "| Hiperparámetro | Valor                      |\n",
     "|----------------|----------------------------------------|\n",
